Fixed problem where footer overlaps content

--- a/web/portfolio/static/main.scss
+++ b/web/portfolio/static/main.scss
@@ -3,12 +3,14 @@
   $theme-background: #F8F9FA;
   $theme-hover: #0069d9;
 
-body {
-  margin: 0;
-}
-html, body, main {
+html, body {
   width: 100%;
   height: 100%;
+  margin: 0;
+}
+main {
+  width: 100%;
+  min-height: 100%;
 }
 div.header {
   display: flex;
